--- a/tclapp/mycompany/myapp2/README
+++ b/tclapp/mycompany/myapp2/README
@@ -1,5 +1,5 @@
 MyCompany Sample App
-This is a sample push #5
+This is a sample push #CU7
 This directory contains a sample app provided by mycompany
 
 All Tcl procs, variables, etc. must be defined within the
