--- a/tclapp/README
+++ b/tclapp/README
@@ -13,12 +13,15 @@ XilinxTclStore/
         tcl files # all tcl sources for utils
         test/  # testing directory
           test.tcl # test script to run under Vivado for utils
+				doc/ # long help files, the name of the files have to be exactly same as the proc name
     mycompany/
       myapp/   # some app from mycompany
         tcl files # all tcl files for myapp
         test/  # testing directory
           test.tcl # test script to run under Vivado for myapp
           test.info
+				doc/ # long help files, the name of the files have to be exactly same as the proc name
+				  
 
 The 'mycompany' provider is included as an example, please see 
 README files in the various directories under this provider for
@@ -29,9 +32,16 @@ TESTING
 Each testing directory has test.tcl where other test scripts can be sourced. 
 e.g. If myapp has two tests, one is test1.tcl and the other is test2.tcl, then test.tcl contains:
 >cat test.tcl
-source test1.tcl
-source test2.tcl
+set path [file normalize [file dirname [info script]]]
+#puts "script is invoked from $path"
+#source [file join $path {test1.tcl}]
+#source [file join $path {test2.tcl}]
 >
+
+HELP 
+Add the long help files into doc directory under the app
+The name of the file has to be exactly same as the proc.
+e.g. write_project_tcl is the command, so the help file will be named "write_project_tcl".
 
 ================================================================
 ADDING A NEW PROVIDER
