Added catalog file for 2013.3 and corrected typo in README in tclapp

--- a/tclapp/README
+++ b/tclapp/README
@@ -1,6 +1,6 @@
 Tcl App directory
 
-This directory is the top-level directory for all Vivaod Tcl Apps.
+This directory is the top-level directory for all Vivado Tcl Apps.
 
 Apps are organized by providers, where a provider is a company.
 Under the provider directory apps are contained within individual
