This is a test, one line added to README

--- a/tclapp/mycompany/myapp/README
+++ b/tclapp/mycompany/myapp/README
@@ -47,4 +47,4 @@ Vivado% ::tclapp::mycompany::myapp::demo1
 Vivado% namespace import ::tclapp::mycompany::myapp::demo1
 Vivado% demo1
 
-
+This file modified by DM on 6/18/13.
