--- a/tclapp/xilinx/ultrafast/README
+++ b/tclapp/xilinx/ultrafast/README
@@ -1,4 +1,4 @@
 UltraFast Methodology Checklist
 
-This app includes the Tcl scripts references by the UltraFast Methodology
+This app includes the Tcl scripts referenced by the UltraFast Methodology
 
