--- a/tclapp/xilinx/ies/README
+++ b/tclapp/xilinx/ies/README
@@ -1,3 +1,3 @@
-IES Simulator simulation script
+Tcl App for IES Simulator
 
-This script can be used to verify the design using Cadence "IES" Simulator
+Simulate a design in Vivado with Cadence IES Simulator
