--- a/tclapp/xilinx/modelsim/README
+++ b/tclapp/xilinx/modelsim/README
@@ -1,3 +1,3 @@
-ModelSim/Questa Simulator simulation script
+Tcl App for ModelSim/Questa Simulator
 
-This script can be used to verify the design using Mentor Graphics "ModelSim/Questa" Simulator
+Simulate a design in Vivado with Mentor Graphics ModelSim/Questa Simulator
