--- a/tclapp/icl/protoip/README
+++ b/tclapp/icl/protoip/README
@@ -7,27 +7,27 @@ All documentation for **protoip** is available in the Wiki at https://github.com
 
 ### protoip commands list (add -usage argument for usage instructions):
 
-	::tclapp::icl::protoip::make_template
-	::tclapp::icl::protoip::make_rand_stimuli
-	::tclapp::icl::protoip::ip_design_duplicate
-	::tclapp::icl::protoip::ip_design_delete
-	::tclapp::icl::protoip::ip_design_build
-	::tclapp::icl::protoip::ip_design_build_debug
-	::tclapp::icl::protoip::ip_design_test
-	::tclapp::icl::protoip::ip_design_test_debug
-	::tclapp::icl::protoip::ip_prototype_build
-	::tclapp::icl::protoip::ip_prototype_build_debug
-	::tclapp::icl::protoip::ip_prototype_load
-	::tclapp::icl::protoip::ip_prototype_load_debug
-	::tclapp::icl::protoip::ip_prototype_test
+	icl::protoip::make_template
+	icl::protoip::make_rand_stimuli
+	icl::protoip::ip_design_duplicate
+	icl::protoip::ip_design_delete
+	icl::protoip::ip_design_build
+	icl::protoip::ip_design_build_debug
+	icl::protoip::ip_design_test
+	icl::protoip::ip_design_test_debug
+	icl::protoip::ip_prototype_build
+	icl::protoip::ip_prototype_build_debug
+	icl::protoip::ip_prototype_load
+	icl::protoip::ip_prototype_load_debug
+	icl::protoip::ip_prototype_test
 
 
 ### using protoip form vivado
 
 
-	Vivado% package require ::tclapp::icl::prototip
-	Vivado% ::tclapp::icl::prototip::my_command1
-	Vivado% namespace import ::tclapp::icl::prototip::my_command1
+	Vivado% package require icl::prototip
+	Vivado% icl::prototip::my_command1
+	Vivado% namespace import icl::prototip::my_command1
 	Vivado% my_command1
 
 
