--- a/tclapp/bluepearl/bpsvvs/README
+++ b/tclapp/bluepearl/bpsvvs/README
@@ -1,50 +1,26 @@
-MyCompany Sample App
+Blue Pearl Software, Visual Verification Suite 
 
-This directory contains a sample app provided by mycompany
+This directory contains the **bpsvvs** app provided by Blue Pearl's
+Visual Verification Suite
 
 All Tcl procs, variables, etc. must be defined within the
 ::tclapp::mycompany::myapp namespace.  No globals of any kind are
 allowed.
 
-The structure of a .tcl file in this directory is something 
-like this:
-
-################################################################
-package require Vivado 2013.1
-
-namespace eval ::tclapp::mycompany::myapp {
-   namespace export <list of procs to export>
-}
-
-proc ::tclapp::mycompany::myapp::<proc> { ... } {
- ...
-}
-
-proc ::tclapp::mycompany::myapp::<proc> { ... } {
- ...
-}
-################################################################
-
-================================================================
-WHEN MAKING CHANGES TO THE CONTENT OF THIS DIRECTORY
-================================================================
-1. Make sure the Tcl files added or changed pass the Tcl linter
-
-% cd <this directory>
-% vivado -nolog -nojournal -mode tcl
-Vivado% lint_files [glob *.tcl]
-
-2. Update the tclIndex file by running auto_mkindex from the 
-   tclsh prompt
-
+### bpsvs commands list 
+::tclapp::bluepearl::bpsvvs::generate_bps_project 
+::tclapp::bluepearl::bpsvvs::launch_bps 
+::tclapp::bluepearl::bpsvvs::update_vivado_into_bps 
 Vivado% auto_mkindex .
 
 ================================================================
 USING THIS APP FROM VIVADO
 ================================================================
-Vivado% package require ::tclapp::mycompany::myapp
-Vivado% ::tclapp::mycompany::myapp::demo1
-Vivado% namespace import ::tclapp::mycompany::myapp::demo1
-Vivado% demo1
+### After your Vivado design has been loaded
+Vivado% package require ::tclapp::bluepearl::bpsvvs
+Vivado% ::tclapp::bluepearl::bpsvvs::generate_bps_project
+Vivado% ::tclapp::bluepearl::bpsvvs::launch_bps
+### After your Vivado design has been implemented
+Vivado% ::tclapp::bluepearl::bpsvvs::update_vivado_into_bps
 
 
