Changinf mentor to siemens

--- a/tclapp/siemens/README
+++ b/tclapp/siemens/README
@@ -1,6 +1,6 @@
-Mentor Graphics Tcl Apps
+Siemens Tcl Apps
 
 This directory is the top-level directory for Tcl Apps provided
-by Mentor Graphics.
+by Siemens.
 
 Please read tclapp/mycompany/README
