--- a/tclapp/siemens/questa_ds/README
+++ b/tclapp/siemens/questa_ds/README
@@ -1,2 +1,2 @@
 Tcl App for Siemens Questa Design Solutions 
-Generate script file to run CDC,RDC,LINT and Autocheck tools with Siemens Questa Design Solutions
+Generate script files to run CDC,RDC,LINT and Autocheck tools with Siemens Questa Design Solutions
